--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,7 +10,7 @@
     content="" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://doriable.github.io/index.html" />
+<link rel="canonical" href="https://doriable.github.io/fr/index.html" />
 
 
 <title>
@@ -51,7 +51,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="https://doriable.github.io/index.xml" title="Doria Keung" />
+<link rel="alternate" type="application/rss+xml" href="https://doriable.github.io/fr/index.xml" title="Doria Keung" />
 
 
 
@@ -77,7 +77,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://doriable.github.io/about/">About</a></li><li><a href="https://doriable.github.io/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="https://doriable.github.io/fr/about/">About</a></li><li><a href="https://doriable.github.io/fr/posts/">Posts</a></li>
     </ul>
 </nav>
 
@@ -117,7 +117,7 @@
                 <span><a href="https://doriable.github.io">Doria Keung</a></span>
             
             <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span>
-            <span> <a href="https://doriable.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span> <a href="https://doriable.github.io/fr/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
         </div>
     </div>
     <div class="footer__inner">
