Make some adjustments to title page and language settings.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <title>
     
-     :: Doria Keung 
+     :: Doria Keung  — Computer wrangling feline.
     
 </title>
 
@@ -38,13 +38,13 @@
 <link rel="shortcut icon" href="https://doriable.github.io/favicon.ico">
 <meta name="theme-color" content="#252627">
 <meta itemprop="name" content="">
-<meta itemprop="description" content="Nice theme for homepages and blogs">
+<meta itemprop="description" content="Doria Keung&#39;s personal blog and website.">
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://doriable.github.io"/>
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Nice theme for homepages and blogs"/>
+<meta name="twitter:description" content="Doria Keung&#39;s personal blog and website."/>
 
 
 
