--- a/fr/404.html
+++ b/fr/404.html
@@ -15,7 +15,7 @@
 
 <title>
     
-    404 Page not found :: Doria Keung 
+    404 Page not found :: Doria Keung  — Un chat avec un ordinateur.
     
 </title>
 
@@ -38,13 +38,13 @@
 <link rel="shortcut icon" href="https://doriable.github.io/favicon.ico">
 <meta name="theme-color" content="#252627">
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Nice theme for homepages and blogs">
+<meta itemprop="description" content="Doria Keung&#39;s personal blog and website.">
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://doriable.github.io"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Nice theme for homepages and blogs"/>
+<meta name="twitter:description" content="Doria Keung&#39;s personal blog and website."/>
 
 
 
